--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -3,5 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
+    android:background="#0E4502"
+    android:foregroundTint="#ECE8E8"
     android:layout_height="match_parent"
     tools:context=".HostActivity" />
