--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -8,4 +8,20 @@
     android:layout_height="match_parent"
     android:background="#0E4502"
     android:foregroundTint="#ECE8E8"
-    tools:context=".HostActivity" />
+    tools:context=".HostActivity"
+
+    >
+
+    <Button
+        android:id="@+id/JoinButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/WinText"
+        app:layout_constraintVertical_bias="0.346"
+        android:layout_width=
+        android:layout_height="wrap_content"
+        android:backgroundTint="#818589"
+        android:text="Join Game" />
+</FrameLayout>
+
