--- a/app/src/main/res/layout/activity_lost.xml
+++ b/app/src/main/res/layout/activity_lost.xml
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/cards_159600_1280" />
 
     <Button
-        android:id="@+id/JoinButton"
+        android:id="@+id/PlayAgainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#818589"
