--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -36,7 +36,7 @@
         app:srcCompat="@drawable/cards_159600_1280" />
 
     <Button
-        android:id="@+id/JoinButton"
+        android:id="@+id/PlayAgainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#818589"
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.346" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/ExitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
