--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/cards_159600_1280" />
 
     <Button
-        android:id="@+id/InviteButton"
+        android:id="@+id/HostInviteButton"
         android:layout_width="205dp"
         android:layout_height="65dp"
         android:backgroundTint="#818589"
@@ -31,10 +31,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.214" />
+        app:layout_constraintVertical_bias="0.216" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/HostText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Players in Network"
@@ -47,14 +47,27 @@
         app:layout_constraintVertical_bias="0.657" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/HostStartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#818589"
-        android:text="Button"
+        android:text="START GAME"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.834" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.962"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.098"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
