--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -8,4 +8,196 @@
     android:foregroundTint="#ECE8E8"
     tools:context=".TableActivity">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="75dp"
+        android:layout_height="66dp"
+        tools:layout_editor_absoluteX="244dp"
+        tools:layout_editor_absoluteY="7dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fold"
+        android:backgroundTint="#D30000"
+        tools:layout_editor_absoluteX="463dp"
+        tools:layout_editor_absoluteY="366dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#818589"
+        android:text="Raise"
+        tools:layout_editor_absoluteX="551dp"
+        tools:layout_editor_absoluteY="366dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#818589"
+        android:text="Call"
+        tools:layout_editor_absoluteX="639dp"
+        tools:layout_editor_absoluteY="366dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="75dp"
+        android:layout_height="66dp"
+        tools:layout_editor_absoluteX="653dp"
+        tools:layout_editor_absoluteY="159dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="75dp"
+        android:layout_height="66dp"
+        tools:layout_editor_absoluteX="253dp"
+        tools:layout_editor_absoluteY="310dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="75dp"
+        android:layout_height="66dp"
+        tools:layout_editor_absoluteX="3dp"
+        tools:layout_editor_absoluteY="172dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="275dp"
+        tools:layout_editor_absoluteY="386dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player 1"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="11dp"
+        tools:layout_editor_absoluteY="243dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player 2"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="251dp"
+        tools:layout_editor_absoluteY="73dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player 3"
+        android:textColor="@color/white"
+        tools:layout_editor_absoluteX="658dp"
+        tools:layout_editor_absoluteY="229dp" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="77dp"
+        android:layout_height="78dp"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
+        tools:layout_editor_absoluteX="312dp"
+        tools:layout_editor_absoluteY="37dp" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="105dp"
+        android:layout_height="78dp"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
+        tools:layout_editor_absoluteX="515dp"
+        tools:layout_editor_absoluteY="82dp" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="105dp"
+        android:layout_height="78dp"
+        app:srcCompat="@drawable/card_back_2_0___poker_size___blue_shw"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="200dp" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/ace_of_clubs"
+        tools:layout_editor_absoluteX="75dp"
+        tools:layout_editor_absoluteY="207dp" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/eight_of_spades"
+        tools:layout_editor_absoluteX="91dp"
+        tools:layout_editor_absoluteY="207dp" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="72dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/seven_of_clubs"
+        tools:layout_editor_absoluteX="328dp"
+        tools:layout_editor_absoluteY="44dp" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/nine_of_diamonds"
+        tools:layout_editor_absoluteX="345dp"
+        tools:layout_editor_absoluteY="44dp" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintTop_toTopOf="@+id/imageView7"
+        app:srcCompat="@drawable/jack_of_clubs"
+        tools:layout_editor_absoluteX="560dp" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/three_of_diamonds"
+        tools:layout_editor_absoluteX="581dp"
+        tools:layout_editor_absoluteY="92dp" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/queen_of_hearts"
+        tools:layout_editor_absoluteX="327dp"
+        tools:layout_editor_absoluteY="286dp" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/king_of_hearts"
+        tools:layout_editor_absoluteX="345dp"
+        tools:layout_editor_absoluteY="286dp" />
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="77dp"
+        android:layout_height="62dp"
+        app:srcCompat="@drawable/nine_of_diamonds"
+        tools:layout_editor_absoluteX="367dp"
+        tools:layout_editor_absoluteY="286dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
