--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#0E4502"
     android:foregroundTint="#ECE8E8"
-    tools:context=".HostActivity" >
+    tools:context="UTD.cs.edu.pocket_poker.HostActivity">
 
     <ImageView
         android:id="@+id/LogoImage"
@@ -23,25 +23,28 @@
 
     <Button
         android:id="@+id/HostInviteButton"
-        android:layout_width="139dp"
-        android:layout_height="49dp"
+        android:layout_width="202dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="69dp"
         android:backgroundTint="#818589"
         android:text="Invite Players"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.39"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.835" />
+        app:layout_constraintEnd_toStartOf="@+id/HostStartButton"
+        app:layout_constraintStart_toEndOf="@+id/HostExitButton"
+        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/HostText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="191dp"
         android:text="Players in Network"
         android:textColor="@color/white"
         android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/HostInviteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,35 +54,39 @@
         android:id="@+id/HostStartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="81dp"
+        android:layout_marginBottom="70dp"
         android:backgroundTint="#818589"
         android:text="START GAME"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.629"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.834" />
+        app:layout_constraintStart_toEndOf="@+id/HostInviteButton"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/ExitButton"
-        android:layout_width="53dp"
-        android:layout_height="58dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.963"
+    <Button
+        android:id="@+id/HostExitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="107dp"
+        android:backgroundTint="#818589"
+        android:text="Exit"
+        app:layout_constraintEnd_toStartOf="@+id/HostInviteButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <view
         android:id="@+id/view"
         class="androidx.cardview.widget.CardView"
         android:layout_width="353dp"
-        android:layout_height="137dp"
-        tools:layout_editor_absoluteX="189dp"
-        tools:layout_editor_absoluteY="153dp" />
-
+        android:layout_height="0dp"
+        android:layout_marginTop="137dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/HostStartButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+ 
