--- a/app/src/main/res/layout/activity_lost.xml
+++ b/app/src/main/res/layout/activity_lost.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#0E4502"
     android:foregroundTint="#ECE8E8"
-    tools:context=".LostActivity">
+    tools:context="UTD.cs.edu.pocket_poker.LostActivity">
 
     <ImageView
         android:id="@+id/LogoImage"
@@ -49,17 +49,18 @@
         app:layout_constraintTop_toBottomOf="@+id/LogoImage"
         app:layout_constraintVertical_bias="0.52" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <Button
         android:id="@+id/ExitButton"
-        android:layout_width="53dp"
-        android:layout_height="58dp"
-        android:clickable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp"
+        android:backgroundTint="#818589"
+        android:text="Exit"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.963"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069"
-        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+        app:layout_constraintTop_toTopOf="@+id/PlayAgainButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
